@@ -2,6 +2,8 @@ v8.0.3
 - Rework last resume and fake watch position
 - Option to not send resume to NextPVR
 - Allow changing channels on recurring EPG timers
+- Handle type 7 to type 2 changes
+- Manual recordings could not be edited
 
 v8.0.2
 - Stop timeline from growing when in-progress recording finish at the backend
